<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background="#37474F"
    tools:context=".activities.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:text="Create New Account"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageprofile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background_img"
                android:scaleType="centerCrop"
                app:riv_oval="true"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="Add Image"
               android:textSize="10sp"/>
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"


            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"

            />
        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/Pass"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            />
        <EditText
            android:id="@+id/ConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="8dp"/>
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>



        </FrameLayout>
        <TextView
            android:id="@+id/textAlready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>