<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    android:background=" #37474F"
    tools:context=".activities.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:text="Welcome To The Rakcha Team"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="Login To Continue"
            android:textColor="@color/lightGrey"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"


            />
        <EditText
            android:id="@+id/inputPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/Pass"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="13sp"


            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:animateLayoutChanges="true"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/ButtonSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="8dp"/>
            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
        <TextView
            android:id="@+id/textCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>